--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2 id="textQuestion"></h2>
         <button id="btnAnswer" class="btn-answer">Answer</button>
         <button id="btnNext" class="btn-next">Next</button>
+        <button id="btnNextLevel" class="btn-next-level">Next Level</button>
       </div>
 
       <div id="resultScreen" class="result-screen">
