--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div id="quizScreen" class="quiz-screen">
         <h2 id="textQuestion"></h2>
         <button id="btnAnswer" class="btn-answer">Answer</button>
+        <h2 id="textExplanation"></h2>
         <button id="btnNext" class="btn-next">Next</button>
         <button id="btnNextLevel" class="btn-next-level">Next Level</button>
       </div>
